[gd_scene load_steps=15 format=2]

[ext_resource path="res://gui/dialog/dialog_box.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/pause/pause_menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/water_meter/water_meter.tscn" type="PackedScene" id=11]
[ext_resource path="res://gui/life_meter/life_meter.tscn" type="PackedScene" id=13]
[ext_resource path="res://gui/hud/hud.gd" type="Script" id=14]
[ext_resource path="res://fonts/red/gui_red.fnt" type="BitmapFont" id=26]
[ext_resource path="res://shaders/flash.shader" type="Shader" id=28]
[ext_resource path="res://gui/hud/hud_red_coin.png" type="Texture" id=33]
[ext_resource path="res://gui/hud/hud_coin.png" type="Texture" id=50]
[ext_resource path="res://gui/hud/hud_shine_coin.png" type="Texture" id=53]
[ext_resource path="res://gui/hud/hud_x.png" type="Texture" id=63]
[ext_resource path="res://gui/hud/hud_silver_shine.png" type="Texture" id=71]
[ext_resource path="res://gui/hud/hud_shine.png" type="Texture" id=79]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 28 )
shader_param/flash_factor = 0.0

[node name="HUD" type="CanvasLayer"]
follow_viewport_enable = true
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="HUDControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 14 )

[node name="DialogBox" parent="HUDControl" instance=ExtResource( 1 )]
visible = false

[node name="PauseMenu" parent="HUDControl" instance=ExtResource( 7 )]
visible = false

[node name="LifeMeter" parent="HUDControl" instance=ExtResource( 13 )]
anchor_left = 0.5
anchor_right = 0.5

[node name="Stats" type="Control" parent="HUDControl"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="StatsTL" type="VBoxContainer" parent="HUDControl/Stats"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -8, -8 )
mouse_filter = 2
custom_constants/separation = 4

[node name="CoinRow" type="Control" parent="HUDControl/Stats/StatsTL"]
margin_bottom = 17.0
rect_min_size = Vector2( 0, 17 )

[node name="Sprite" type="Sprite" parent="HUDControl/Stats/StatsTL/CoinRow"]
texture = ExtResource( 50 )
centered = false

[node name="X" type="Sprite" parent="HUDControl/Stats/StatsTL/CoinRow"]
position = Vector2( 19, 4 )
texture = ExtResource( 63 )
centered = false

[node name="Count" type="Label" parent="HUDControl/Stats/StatsTL/CoinRow"]
material = SubResource( 1 )
margin_left = 32.0
margin_top = 1.0
margin_right = 72.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedCoinRow" type="Control" parent="HUDControl/Stats/StatsTL"]
margin_top = 21.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 17 )

[node name="Sprite" type="Sprite" parent="HUDControl/Stats/StatsTL/RedCoinRow"]
texture = ExtResource( 33 )
centered = false

[node name="X" type="Sprite" parent="HUDControl/Stats/StatsTL/RedCoinRow"]
position = Vector2( 19, 4 )
texture = ExtResource( 63 )
centered = false

[node name="Count" type="Label" parent="HUDControl/Stats/StatsTL/RedCoinRow"]
margin_left = 32.0
margin_top = 1.0
margin_right = 80.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SilverShineRow" type="Control" parent="HUDControl/Stats/StatsTL"]
margin_top = 42.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 17 )

[node name="Sprite" type="Sprite" parent="HUDControl/Stats/StatsTL/SilverShineRow"]
texture = ExtResource( 71 )
centered = false

[node name="X" type="Sprite" parent="HUDControl/Stats/StatsTL/SilverShineRow"]
position = Vector2( 19, 4 )
texture = ExtResource( 63 )
centered = false

[node name="Count" type="Label" parent="HUDControl/Stats/StatsTL/SilverShineRow"]
margin_left = 32.0
margin_top = 1.0
margin_right = 112.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsTR" type="VBoxContainer" parent="HUDControl/Stats"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -8.0
margin_top = 8.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 8, -8 )
mouse_filter = 2
custom_constants/separation = 4

[node name="ShineRow" type="Control" parent="HUDControl/Stats/StatsTR"]
margin_right = 8.0
margin_bottom = 17.0
rect_min_size = Vector2( 0, 17 )

[node name="Sprite" type="Sprite" parent="HUDControl/Stats/StatsTR/ShineRow"]
position = Vector2( -40.5, 7.5 )
texture = ExtResource( 79 )

[node name="X" type="Sprite" parent="HUDControl/Stats/StatsTR/ShineRow"]
position = Vector2( -29, 4 )
texture = ExtResource( 63 )
centered = false

[node name="Count" type="Label" parent="HUDControl/Stats/StatsTR/ShineRow"]
margin_left = -15.0
margin_top = 1.0
margin_right = 65.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShineCoinRow" type="Control" parent="HUDControl/Stats/StatsTR"]
margin_top = 21.0
margin_right = 8.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 17 )

[node name="Sprite" type="Sprite" parent="HUDControl/Stats/StatsTR/ShineCoinRow"]
position = Vector2( -40, 9.5 )
texture = ExtResource( 53 )

[node name="X" type="Sprite" parent="HUDControl/Stats/StatsTR/ShineCoinRow"]
position = Vector2( -29, 4 )
texture = ExtResource( 63 )
centered = false

[node name="Count" type="Label" parent="HUDControl/Stats/StatsTR/ShineCoinRow"]
margin_left = -15.0
margin_top = 1.0
margin_right = 65.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeterControl" parent="HUDControl/Stats" instance=ExtResource( 11 )]
